# daily-x-signal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-fallback.yml
config/: default.yaml  local.example.yaml
daily_x_signal/: __init__.py  cli.py  collector.py  config.py  core_authors.py  feishu.py  github_fallback.py  llm.py  models.py  report.py  scheduler.py  scoring.py  store.py  window.py  x_client.py
scripts/: install_launchd.sh  run_daily_brief.sh  scheduler_tick.sh
skills/daily-x-signal/: SKILL.md
